[package]
 edition = "2021"
 name    = "nowpayments"
 version = "0.1.0"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 reqwest    = { version = "0.11.18", features = ["json"] }
 serde      = { version = "1.0.164", features = ["derive"] }
 serde_json = { version = "1.0.96" }
 anyhow = {version = "1.0.71"}
 tokio = {version = "1.28.2", features = ["full"]}

[dev-dependencies]
 dotenvy = { version = "0.15.7", features = [] }
 envy    = "0.4.2"
