[package]
 description = "(WIP) Nowpayments rust api"
 edition     = "2021"
 license     = "MIT"
 name        = "nowpayments"
 version     = "0.1.0"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 anyhow     = { version = "1.0.71" }
 reqwest    = { version = "0.11.18", features = ["json"] }
 serde      = { version = "1.0.164", features = ["derive"] }
 serde_json = { version = "1.0.96" }
 tokio      = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
 dotenvy = { version = "0.15.7", features = [] }
 envy    = "0.4.2"

 [dev-dependencies.uuid]
  features = [
   "fast-rng",          # Use a faster (but still sufficiently random) RNG
   "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
   "v4"                 # Lets you generate random UUIDs
  ]
  version = "1.3.3"
