[package]
 description = "(WIP) Nowpayments rust api"
 edition     = "2021"
 license     = "MIT"
 name        = "nowpayments"
 version     = "0.2.2"

 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 anyhow  = { version = "1.0.71" }
 reqwest = { version = "0.11.18", features = ["json"] }
 #  serde      = { version = "1.0.164", features = ["derive"] }
 #  serde_json = { version = "1.0.96" }
 miniserde = { version = "0.1.30" }

[dev-dependencies]
 dotenvy = { version = "0.15.7", features = [] }
 envy    = "0.4.2"
 serde   = "1.0.164"
 tokio   = { version = "1.28.2", features = ["macros", "test-util"] }
